--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 </head>
 <body>
     <div class="protfolio-container">
-        
+        <ul class="navlist">
+            <li><a href="#" class="active">Home</a></li>
+            <li><a href="#">Work</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Project</a></li>
+            <li><a href="#">Service</a></li>
+        </ul>
         <div class="left-container">
             <div class="icons">
                 <i class="fa-brands fa-facebook-f"></i>
